# implied_cost_of_capital_training

./: .gitignore  README.md  pyproject.toml  serve.ps1
.github/workflows/: docs.yml
devs/: historical_mean_returns.py
docs/: conf.py  index.md  index.rst  introduction.md  introduction.rst  test-math.md
docs/exercises/: exercises.md  exercises.rst
docs/modules/: module1.md  module1.rst  module10.md  module11.md  module12.md  module13.md  module14.md  module15.md  module2.md  module2.rst  module3.md  module4.md  module5.md  module6.md  module7.md  module8.md  module9.md  part1.md
script/module_3/: script_1.py
