[project]
name = "implied-cost-of-capital-training"
version = "0.1.0"
description = "Course materials for Implied Cost of Capital"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autobuild>=2024.0.0",
    "polars>=1.36.1",
    "yfinance>=1.1.0",
    "matplotlib>=3.9.4",
    "pyarrow>=21.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.sphinx]
source-dir = "docs"
build-dir = "docs/_build"

[tool.hatch.build.targets.wheel]
packages = ["implied-cost-of-capital-training"]
